# django-spinproject

./: .gitignore  DEVELOPMENT.md  LICENSE  Makefile  README.md  enhance-dockerfile.py  enhance-makefile.py  enhance-settings.py  enhance-srta.py  hatch.toml  old.pyproject.toml  pyproject.toml  spinproject.py
.github/workflows/: audit.yaml
django_spinproject/: cli.py  constants.py
django_spinproject/generic/: compatibility_trait.py  dicts_merging.py  directory_cleaning.py  exit.py  extended_jinja_environment.py  file_upgrade.py  hash.py  line_inserting.py  package.py  serializable_obj.py  serialization.py  version_registry.py
django_spinproject/modules/: __init__.py  _base.py  _docker.py  _mixins.py  docker_scripts.py  docker_scripts_data.py  dockerfile.py  dockerfile_data.py  dockerignore.py  dockerignore_data.py  exceptions.py  gitignore.py  gitignore_data.py  gitlab_ci.py  gitlab_ci_data.py  login_template.py  pg_readonly.py  pg_readonly_data.py  pytest.py  pytest_data.py  settings.py  settings_data.py  srta.py  srta_data.py
django_spinproject/modules/docker_scripts_data/: __init__.py  v1.py  v2.py
django_spinproject/modules/dockerfile_data/: __init__.py  v1.py  v2.py  v3.py  v4.py
django_spinproject/modules/dockerignore_data/: __init__.py  v1.py  v2.py  v3.py  v4.py
django_spinproject/modules/gitignore_data/: v1.py  v2.py  v3.py  v4.py
django_spinproject/modules/gitlab_ci_data/: __init__.py  v1.py  v2.py  v3.py  v4.py  v5.py
django_spinproject/modules/login_template_data/: v1.py
django_spinproject/modules/pg_readonly_data/: v1.py
django_spinproject/modules/pytest_data/: v1.py
django_spinproject/modules/settings_data/: v1.py  v2.py  v3.py  v4.py
django_spinproject/modules/srta_data/: __init__.py  v1.py  v2.py  v3.py  v4.py  v5.py  v6.py
django_spinproject/project/: exceptions.py  manager.py  memento.py  project_info.py  updater.py
django_spinproject/project/sections/: config.py  docker.py
django_spinproject/project_manager/: project_info.py  project_info_manager.py
